--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ comments: true
 ---
 
   	{% include partials/navigation/nav.html %}
-  	
+  	{% include partials/head.html %}  	
 <main id="page-main" role="main">
 	<div id="layout">
 					<nav class="nav-scroll anm-moveFromLeftFade">
@@ -29,7 +29,6 @@ comments: true
 				<h3><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></h3>
 				<strong>{{ post.category }}</strong>
         		<div>{% if post.img %}<a href="../{{ post.img }}" data-lightbox="roadtrip"><img class="blog-img" src="../{{ post.img }}"></a>{% endif %}{{ post.excerpt }}</div>
-      			<a id="link-comment" href="{{ site.baseurl }}{{ post.url }}#disqus_thread" class="anm-moveFromLeftFade delay-1500"> Comentaris</a>
       			<nav><a href="{{ site.baseurl }}{{ post.url }}" class="read-more"><b>[+]</b></a></nav>
       		</article>
     	</div>
