--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@ comments: true
 						 </div>
 					</nav>
 					<hr>
-					<input type="radio" name="layout" id="layout-simple" aria-hidden="true" hidden>
-					<input type="radio" name="layout" id="layout-list" aria-hidden="true" hidden checked>
+					<input type="radio" name="layout" id="layout-simple" aria-hidden="true" hidden checked>
+					<input type="radio" name="layout" id="layout-list" aria-hidden="true" hidden>
 					<input type="radio" name="layout" id="layout-table" aria-hidden="true" hidden>
 					<input type="radio" name="layout" id="layout-gallery" aria-hidden="true" hidden>
 					<input type="radio" name="layout" id="layout-cards" aria-hidden="true" hidden>
@@ -28,7 +28,7 @@ comments: true
       		<article class="anm-fadeIn delay-1000">
 				<h3><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></h3>
 				<strong>{{ post.category }}</strong>
-        		<div>{% if post.img %}<a href="../{{ post.img }}" data-lightbox="roadtrip"><img class="blog-img" src="../{{ post.img }}"></a>{% endif %}{{ post.excerpt }}</div>
+        		<div>{% if post.id %}<a href="{{ site.baseurl }}{{ post.url }}"><img class="blog-img" src="http://img.youtube.com/vi/{{ page.id }}/0.jpg"></a>{% endif %}{{ post.excerpt }}</div>
       			<nav><a href="{{ site.baseurl }}{{ post.url }}" class="read-more"><b>[+]</b></a></nav>
       		</article>
     	</div>
