--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ comments: true
       		<article class="anm-fadeIn delay-1000">
 				<h3><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></h3>
 				<strong>{{ post.category }}</strong>
-        		<div>{% if post.id %}<a href="{{ site.baseurl }}{{ post.url }}"><img class="blog-img" src="http://img.youtube.com/vi/{{ page.id }}/0.jpg"></a>{% endif %}{{ post.excerpt }}</div>
+        		<div>{% if post.id %}<a href="{{ site.baseurl }}{{ post.url }}"><img class="blog-img" src="http://img.youtube.com/vi/{{ post.id }}/0.jpg"></a>{% endif %}{{ post.excerpt }}</div>
       			<nav><a href="{{ site.baseurl }}{{ post.url }}" class="read-more"><b>[+]</b></a></nav>
       		</article>
     	</div>
