--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@ comments: true
 	<div id="layout">
 					<nav class="nav-scroll anm-moveFromLeftFade">
 						<div>
-							<label for="layout-simple" title="Simple" id="label-simple" class="anm-zoomIn delay-500"><img src="{{ site.baseurl }}/hipertextos/images/icons.svg"><br>Ampliar</label>
-							<label for="layout-list" title="List" id="label-list" class="anm-zoomIn delay-600"><img src="{{ site.baseurl }}/hipertextos/images/list.svg"><br>Llista</label>
-							<label for="layout-table" title="Table" id="label-table" class="anm-zoomIn delay-700"><img src="{{ site.baseurl }}/hipertextos/images/table.svg"><br>Taula</label>
-							<label for="layout-gallery" title="Gallery" id="label-gallery" class="anm-zoomIn delay-800"><img src="{{ site.baseurl }}/hipertextos/images/icons8.svg"><br>Galeria</label>
-							<label for="layout-cards" title="Cards" id="label-cards" class="anm-zoomIn delay-900"><img src="{{ site.baseurl }}/hipertextos/images/icons4.svg"><br>Reduïr</label>		
+							<label for="layout-simple" title="Simple" id="label-simple" class="anm-zoomIn delay-500">Ampliar</label>
+							<label for="layout-list" title="List" id="label-list" class="anm-zoomIn delay-600">Llista</label>
+							<label for="layout-table" title="Table" id="label-table" class="anm-zoomIn delay-700">Taula</label>
+							<label for="layout-gallery" title="Gallery" id="label-gallery" class="anm-zoomIn delay-800">Galeria</label>
+							<label for="layout-cards" title="Cards" id="label-cards" class="anm-zoomIn delay-900">Reduïr</label>		
 						 </div>
 					</nav>
 					<hr>
