--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@ comments: true
 						<div>
 							<label for="layout-simple" title="Simple" id="label-simple" class="anm-zoomIn delay-500">Ampliar</label>
 							<label for="layout-list" title="List" id="label-list" class="anm-zoomIn delay-600">Llista</label>
-							<label for="layout-table" title="Table" id="label-table" class="anm-zoomIn delay-700">Taula</label>
-							<label for="layout-gallery" title="Gallery" id="label-gallery" class="anm-zoomIn delay-800">Galeria</label>
-							<label for="layout-cards" title="Cards" id="label-cards" class="anm-zoomIn delay-900">Reduïr</label>		
+							<label for="layout-gallery" title="Gallery" id="label-gallery" class="anm-zoomIn delay-700">Galeria</label>
+							<label for="theme-dark" id="label-dark" data-title="Dark theme" class="anm-zoomIn delay-800"></label>
+							<label for="theme-soft" id="label-soft" data-title="Soft theme" class="anm-zoomIn delay-900"></label>
+							<label for="theme-light" id="label-light" data-title="Light theme" class="anm-zoomIn delay-1000"></label>
 						 </div>
 					</nav>
 					<hr>
 					<input type="radio" name="layout" id="layout-simple" aria-hidden="true" hidden checked>
 					<input type="radio" name="layout" id="layout-list" aria-hidden="true" hidden>
-					<input type="radio" name="layout" id="layout-table" aria-hidden="true" hidden>
 					<input type="radio" name="layout" id="layout-gallery" aria-hidden="true" hidden>
-					<input type="radio" name="layout" id="layout-cards" aria-hidden="true" hidden>
+					<input type="checkbox" id="tools-check" name="tools" aria-hidden="true" hidden>
 					
   		{% for post in site.posts %}
     	<div id="layout-result">
