--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@ comments: true
 							<label for="layout-simple" title="Simple" id="label-simple" class="anm-zoomIn delay-500">Ampliar</label>
 							<label for="layout-list" title="List" id="label-list" class="anm-zoomIn delay-600">Llista</label>
 							<label for="layout-gallery" title="Gallery" id="label-gallery" class="anm-zoomIn delay-700">Galeria</label>
-							<label for="theme-dark" id="label-dark" data-title="Dark theme" class="anm-zoomIn delay-800"></label>
-							<label for="theme-soft" id="label-soft" data-title="Soft theme" class="anm-zoomIn delay-900"></label>
-							<label for="theme-light" id="label-light" data-title="Light theme" class="anm-zoomIn delay-1000"></label>
+							<label for="theme-dark" id="label-dark" data-title="Dark theme" class="anm-zoomIn delay-800">Oscuro</label>
+							<label for="theme-soft" id="label-soft" data-title="Soft theme" class="anm-zoomIn delay-900">Rojo</label>
+							<label for="theme-light" id="label-light" data-title="Light theme" class="anm-zoomIn delay-1000">Claro</label>
 						 </div>
 					</nav>
 					<hr>
