--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@ comments: true
 							<label for="layout-list" title="List" id="label-list" class="anm-zoomIn delay-500">&minusb;<br>Llista</label>
 							<label for="layout-gallery" title="Gallery" id="label-gallery" class="anm-zoomIn delay-600">&plusb;<br>Galeria</label>
 							<label class="non-click anm-zoomIn delay-700">|</label>
-							<label for="theme-dark" id="label-dark" data-title="Dark theme" class="anm-zoomIn delay-800">Oscuro</label>
-							<label for="theme-soft" id="label-soft" data-title="Soft theme" class="anm-zoomIn delay-900">Rojo</label>
-							<label for="theme-light" id="label-light" data-title="Light theme" class="anm-zoomIn delay-1000">Claro</label>
+							<label for="theme-dark" id="label-dark" data-title="Dark theme" class="anm-zoomIn delay-800">&FilledSmallSquare;<br>Oscuro</label>
+							<label for="theme-soft" id="label-soft" data-title="Soft theme" class="anm-zoomIn delay-900">&star;<br>Rojo</label>
+							<label for="theme-light" id="label-light" data-title="Light theme" class="anm-zoomIn delay-1000">&EmptySmallSquare;<br>Claro</label>
 						 </div>
 					</nav>
 					<hr>
