--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@ comments: true
 	<div id="layout">
 					<nav class="nav-scroll anm-moveFromLeftFade">
 						<div>
-							<label for="layout-simple" title="Simple" id="label-simple" class="anm-zoomIn delay-400"><h6>&timesb;</h6><br>Ampliar</label>
-							<label for="layout-list" title="List" id="label-list" class="anm-zoomIn delay-500"><h5>&minusb;</h5><br>Llista</label>
-							<label for="layout-gallery" title="Gallery" id="label-gallery" class="anm-zoomIn delay-600"><h4>&plusb;</h4><br>Galeria</label>
+							<label for="layout-simple" title="Simple" id="label-simple" class="anm-zoomIn delay-400"><b>&timesb;</b><br>Ampliar</label>
+							<label for="layout-list" title="List" id="label-list" class="anm-zoomIn delay-500"><b>&minusb;</b><br>Llista</label>
+							<label for="layout-gallery" title="Gallery" id="label-gallery" class="anm-zoomIn delay-600"><b>&plusb;</b><br>Galeria</label>
 							<label class="non-click anm-zoomIn delay-700">|</label>
-							<label for="theme-dark" id="label-dark" data-title="Dark theme" class="anm-zoomIn delay-800">&FilledSmallSquare;<br>Oscuro</label>
-							<label for="theme-soft" id="label-soft" data-title="Soft theme" class="anm-zoomIn delay-900">&star;<br>Rojo</label>
-							<label for="theme-light" id="label-light" data-title="Light theme" class="anm-zoomIn delay-1000">&EmptySmallSquare;<br>Claro</label>
+							<label for="theme-dark" id="label-dark" data-title="Dark theme" class="anm-zoomIn delay-800"><b>&FilledSmallSquare;</b><br>Oscuro</label>
+							<label for="theme-soft" id="label-soft" data-title="Soft theme" class="anm-zoomIn delay-900"><b>&star;</b><br>Rojo</label>
+							<label for="theme-light" id="label-light" data-title="Light theme" class="anm-zoomIn delay-1000"><b>&EmptySmallSquare;</b><br>Claro</label>
 						 </div>
 					</nav>
 					<hr>
