--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ comments: true
   	{% include partials/head.html %}  	
 <main id="page-main" role="main">
 	<div id="layout">
-					<nav class="nav-scroll anm-moveFromLeftFade">
+					<nav id="tools-nav" class="nav-scroll anm-moveFromLeftFade">
 						<div>
 							<label for="layout-simple" title="Simple" id="label-simple" class="anm-zoomIn delay-500"><b>&timesb;</b><br>Ampliar</label>
 							<label for="layout-list" title="List" id="label-list" class="anm-zoomIn delay-600"><b>&minusb;</b><br>Llista</label>
