--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 modes: true
+paginate: 2
 ---
 
   	{% include partials/navigation/nav.html %}
@@ -26,8 +27,8 @@ modes: true
 					<input type="radio" id="theme-soft" name="theme" aria-hidden="true" hidden>
 					<input type="radio" id="theme-dark" name="theme" aria-hidden="true" hidden>
 							
-  		{% for post in site.posts %}
-    	<div id="layout-result">
+  		{% for post in paginator.posts %}
+    	<div id="layout-result" class="content">
       		<article class="anm-fadeIn delay-1500">
 				<h3><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></h3>
 				<strong>{{ post.category }}</strong>
