--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ paginate: 2
 					<input type="radio" id="theme-soft" name="theme" aria-hidden="true" hidden>
 					<input type="radio" id="theme-dark" name="theme" aria-hidden="true" hidden>
 							
-	<div class="content-posts">
+	<div class="content">
   		{% for post in paginator.posts %}
     	<div id="layout-result">
       		<article class="anm-fadeIn delay-1500">
@@ -62,13 +62,13 @@ paginate: 2
 </div>
 
 
-<script src="{{ site.siteurl }}/js/jquery-1.11.1.js"></script>
-<script src="{{ site.siteurl }}/js/infinite-srcoll.js"></script>
+<script src="{{ site.siteurl }}/hipertextos/js/jquery-1.11.1.js"></script>
+<script src="{{ site.siteurl }}/hipertextos/js/infinite-srcoll.js"></script>
 
 <script type="text/javascript">
 // content selector is used to extract the additional items 
-$('.content-posts').jscroll({
-    contentSelector: ".content-posts",
+$('.content').jscroll({
+    contentSelector: ".content",
     nextSelector: '.next'
 });
 </script>
