--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ modes: true
   	{% include partials/navigation/nav.html %}
   	{% include partials/head.html %}  	
 <main id="page-main" role="main">
-	<div id="layout">
+	<div id="layout" class="content">
 					<nav class="nav-scroll anm-moveFromLeftFade">
 						<div>
 							<label for="layout-simple" title="Simple" id="label-simple" class="anm-zoomIn delay-500"><b>&timesb;</b><br>Ampliar</label>
@@ -26,7 +26,6 @@ modes: true
 					<input type="radio" id="theme-soft" name="theme" aria-hidden="true" hidden>
 					<input type="radio" id="theme-dark" name="theme" aria-hidden="true" hidden>
 							
-	<div class="content">
   		{% for post in paginator.posts %}
     	<div id="layout-result">
       		<article class="anm-fadeIn delay-1500">
@@ -57,7 +56,6 @@ modes: true
     	{% endif %}
   		</div>
   		{% endif %}
-	</div>  
 </div>
 
 
