--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@ modes: true
 					<input type="radio" id="theme-dark" name="theme" aria-hidden="true" hidden>
 							
   		{% for post in paginator.posts %}
-    	<div id="layout-result" class="content">
-      		<article class="anm-fadeIn delay-1500">
+    	<div id="layout-result">
+      		<article class="anm-fadeIn delay-1500 content">
 				<h3><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></h3>
 				<strong>{{ post.category }}</strong>
         		<div>{% if post.id %}<a href="{{ site.baseurl }}{{ post.url }}"><img class="blog-img" src="https://i1.ytimg.com/vi/{{ post.img }}/maxresdefault.jpg"></a>{% endif %}{{ post.excerpt }}</div>
