--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@ modes: true
 					<input type="radio" id="theme-soft" name="theme" aria-hidden="true" hidden>
 					<input type="radio" id="theme-dark" name="theme" aria-hidden="true" hidden>
 							
+	<div class="content">
   		{% for post in paginator.posts %}
     	<div id="layout-result">
-      		<article class="anm-fadeIn delay-1500 content">
+      		<article class="anm-fadeIn delay-1500">
 				<h3><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></h3>
 				<strong>{{ post.category }}</strong>
         		<div>{% if post.id %}<a href="{{ site.baseurl }}{{ post.url }}"><img class="blog-img" src="https://i1.ytimg.com/vi/{{ post.img }}/maxresdefault.jpg"></a>{% endif %}{{ post.excerpt }}</div>
@@ -57,6 +58,7 @@ modes: true
 
     	</div>
   		{% endfor %}
+	</div>
 	</div>
 	<em><hr></em>
 	<div>
