--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ modes: true
 					<input type="radio" id="theme-light" name="theme" aria-hidden="true" hidden>
 					<input type="radio" id="theme-soft" name="theme" aria-hidden="true" hidden>
 					<input type="radio" id="theme-dark" name="theme" aria-hidden="true" hidden>
-							
+<div class="content">							
   		{% for post in paginator.posts %}
     	<div id="layout-result">
       		<article class="anm-fadeIn delay-1500">
@@ -57,6 +57,7 @@ modes: true
 
     	</div>
   		{% endfor %}
+</div>
 	</div>
 	<em><hr></em>
 	<div>
