--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ modes: true
 							<label for="layout-simple" title="Simple" id="label-simple" class="anm-zoomIn delay-500"><b>&timesb;</b><br>Ampliar</label>
 							<label for="layout-list" title="List" id="label-list" class="anm-zoomIn delay-600"><b>&minusb;</b><br>Lista</label>
 							<label for="layout-gallery" title="Gallery" id="label-gallery" class="anm-zoomIn delay-700"><b>&plusb;</b><br>Galeria</label>
-							<label id="separador" class="anm-zoomIn delay-1500"></label>
+							<label id="separador" class="anm-zoomIn delay-1500">&mid;</label>
 							<label for="theme-dark" id="label-dark" data-title="Dark theme" class="anm-zoomIn delay-800"><b>&FilledSmallSquare;</b><br>Oscuro</label>
 							<label for="theme-soft" id="label-soft" data-title="Soft theme" class="anm-zoomIn delay-900"><b>&star;</b><br>Rojo</label>
 							<label for="theme-light" id="label-light" data-title="Light theme" class="anm-zoomIn delay-1000"><b>&EmptySmallSquare;</b><br>Blanco</label>
