--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@ modes: true
   	{% include partials/head.html %}  	
 <main id="page-main" role="main">
 	<div id="layout">
-					<nav class="nav-scroll anm-moveFromLeftFade">
+					<nav class="nav-scroll anm-moveFromLeftFade delay-100">
 						<div>
-							<label for="layout-simple" title="Simple" id="label-simple" class="anm-zoomIn delay-500"><b>&timesb;</b><br>Ampliar</label>
-							<label for="layout-list" title="List" id="label-list" class="anm-zoomIn delay-600"><b>&minusb;</b><br>Lista</label>
-							<label for="layout-gallery" title="Gallery" id="label-gallery" class="anm-zoomIn delay-700"><b>&plusb;</b><br>Galeria</label>
-							<label id="separador" class="anm-zoomIn delay-1500">&boxv;</label>
+							<label for="layout-simple" title="Simple" id="label-simple" class="anm-zoomIn delay-400"><b>&timesb;</b><br>Ampliar</label>
+							<label for="layout-list" title="List" id="label-list" class="anm-zoomIn delay-500"><b>&minusb;</b><br>Lista</label>
+							<label for="layout-gallery" title="Gallery" id="label-gallery" class="anm-zoomIn delay-600"><b>&plusb;</b><br>Galeria</label>
+							<label id="separador" class="anm-zoomIn delay-700">&boxv;</label>
 							<label for="theme-dark" id="label-dark" data-title="Dark theme" class="anm-zoomIn delay-800"><b>&FilledSmallSquare;</b><br>Oscuro</label>
 							<label for="theme-soft" id="label-soft" data-title="Soft theme" class="anm-zoomIn delay-900"><b>&star;</b><br>Rojo</label>
 							<label for="theme-light" id="label-light" data-title="Light theme" class="anm-zoomIn delay-1000"><b>&EmptySmallSquare;</b><br>Blanco</label>
@@ -28,7 +28,7 @@ modes: true
   		{% for post in paginator.posts %}
     	<div id="layout-result">
 <div class="content">							
-      		<article class="anm-fadeIn delay-500">
+      		<article class="anm-moveFromBottomFade delay-1000">
 				<h3><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></h3>
 				<strong>{{ post.category }}</strong>
         		<div>{% if post.id %}<a href="{{ site.baseurl }}{{ post.url }}"><img class="blog-img" src="https://i1.ytimg.com/vi/{{ post.img }}/maxresdefault.jpg"></a>{% endif %}{{ post.excerpt }}</div>
