--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ modes: true
       		<article class="anm-moveFromBottomFade delay-1000">
 				<h3><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></h3>
 				<strong>{{ post.category }}</strong>
-        		<div>{% if post.id %}<a href="{{ site.baseurl }}{{ post.url }}"><img class="blog-img" src="https://i1.ytimg.com/vi/{{ post.img }}/maxresdefault.jpg"></a>{% endif %}{{ post.excerpt }}</div>
+        		<div>{% if post.id %}<a href="{{ site.baseurl }}{{ post.url }}"><img class="blog-img" src="https://i1.ytimg.com/vi/{{ post.img }}/maxresdefault.jpg" rel="foto de {{ post.title }}" title="{{ post.title }}"></a>{% endif %}{{ post.excerpt }}</div>
       			<nav><a href="{{ site.baseurl }}{{ post.url }}" class="read-more"><b>[+]</b></a></nav>
       		</article>
 		{% if paginator.total_pages > 1 %}
