--- a/buscar.html
+++ b/buscar.html
@@ -3,7 +3,7 @@ layout: default
 modes: true
 ---
 
-  	{% include partials/head.html %}  	
+  	{% include partials/header-search.html %}  	
 <main id="page-main" role="main">
 	<div id="layout">
 					<nav class="nav-scroll anm-moveFromLeftFade delay-100">
