--- a/buscar.html
+++ b/buscar.html
@@ -5,7 +5,7 @@ modes: true
 ---
 
   	{% include partials/header-search.html %}  	
-<main id="page-main" role="main">
+<main id="page-main" class="buscar-results">
 	<div id="layout">
     	<div id="layout-result">
       		<section>
