--- a/buscar.html
+++ b/buscar.html
@@ -10,15 +10,15 @@ modes: true
     	<div id="buscar-resultats">
       		<section>
 				<script>
-				  (function() {
-				    var cx = 'partner-pub-2493257171023914:8890185994';
-				    var gcse = document.createElement('script');
-				    gcse.type = 'text/javascript';
-				    gcse.async = true;
-				    gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
-    				var s = document.getElementsByTagName('script')[0];
-    				s.parentNode.insertBefore(gcse, s);
-				  })();
+  (function() {
+    var cx = 'partner-pub-2493257171023914:8890185994';
+    var gcse = document.createElement('script');
+    gcse.type = 'text/javascript';
+    gcse.async = true;
+    gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(gcse, s);
+  })();
 				</script>
 				<gcse:searchresults-only></gcse:searchresults-only>
       		</section>
@@ -26,7 +26,7 @@ modes: true
 	</div>
 	<em><hr></em>
 	<div>
-		<section id="resultats">
+		<section id="buscar-related">
 			<script type="text/javascript" src="http://www.google.com/cse/query_renderer.js"></script>
 			<div id="queries"></div>
 			<script src="http://www.google.com/cse/api/partner-pub-2493257171023914/cse/8890185994/queries/js?oe=UTF-8&amp;callback=(new+PopularQueryRenderer(document.getElementById(%22queries%22))).render"></script>
