--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ modes: true
       		<article class="anm-moveFromBottomFade delay-1000">
 				<h3><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></h3>
 				<strong>{{ post.category }}</strong>
-        		<div>{% if post.id %}<a href="{{ site.baseurl }}{{ post.url }}"><img class="blog-img" src="https://i1.ytimg.com/vi/{{ post.img }}/maxresdefault.jpg" rel="foto de {{ post.title }}" title="{{ post.title }}"></a>{% endif %}{{ post.excerpt }}</div>
+        		<div>{% if post.id %}<a href="{{ site.baseurl }}{{ post.url }}"><img class="blog-img" src="https://i1.ytimg.com/vi/{{ post.img }}/maxresdefault.jpg" rel="foto de {{ post.title }} , {% for tag in page.tags %} {{ tag }}, {% endfor %}" title="{{ post.title }}"></a>{% endif %}{{ post.excerpt }}</div>
       			<nav><a href="{{ site.baseurl }}{{ post.url }}" class="read-more"><b>[+]</b></a></nav>
       		</article>
 		{% if paginator.total_pages > 1 %}
@@ -40,14 +40,14 @@ modes: true
     	{% if paginator.page == 2 %}
         <a href="{{ site.siteurl }}/">&laquo; Prev</a>
     	{% else %}
-        <a href="{{ site.siteurl }}/page{{ paginator.previous_page }}/">&laquo; Prev</a>
+        <a href="{{ site.siteurl }}/page{{ paginator.previous_page }}/">&laquo; Anterior</a>
     	{% endif %}    
 		{% else %}
     	<span>&laquo; Prev</span>
 		{% endif %}
 
 	    {% if paginator.next_page %}
-    	<a class='next' href="{{ site.siteurl }}/page{{ paginator.next_page }}/">Next &raquo;</a>
+    	<a class='next' href="{{ site.siteurl }}/page{{ paginator.next_page }}/">Siguiente &raquo;</a>
 		{% else %}
     	<span class='next'>Next &raquo;</span>
     	{% endif %}
