--- a/index.html
+++ b/index.html
@@ -8,16 +8,15 @@ modes: true
 	<div id="layout">
 					<nav class="nav-scroll anm-moveFromLeftFade delay-100">
 						<div>
-							<label for="layout-simple" title="Simple" id="label-simple" class="anm-zoomIn delay-400"><b>&timesb;</b><br>Ampliar</label>
-							<label for="layout-list" title="List" id="label-list" class="anm-zoomIn delay-500"><b>&minusb;</b><br>Lista</label>
-							<label for="layout-gallery" title="Gallery" id="label-gallery" class="anm-zoomIn delay-600"><b>&plusb;</b><br>Galeria</label>
+							<label for="layout-simple" title="ver Gran formato" id="label-simple" class="anm-zoomIn delay-400"><b>&timesb;</b></label>
+							<label for="layout-list" title="ver en Lista compacta" id="label-list" class="anm-zoomIn delay-500"><b>&minusb;</b></label>
+							<label for="layout-gallery" title="ver en Galeria" id="label-gallery" class="anm-zoomIn delay-600"><b>&plusb;</b></label>
 							<label id="separador" class="anm-zoomIn delay-700">&boxv;</label>
-							<label for="theme-dark" id="label-dark" data-title="Dark theme" class="anm-zoomIn delay-800"><b>&FilledSmallSquare;</b><br>Oscuro</label>
-							<label for="theme-soft" id="label-soft" data-title="Soft theme" class="anm-zoomIn delay-900"><b>&star;</b><br>Rojo</label>
-							<label for="theme-light" id="label-light" data-title="Light theme" class="anm-zoomIn delay-1000"><b>&EmptySmallSquare;</b><br>Blanco</label>
+							<label for="theme-dark" id="label-dark" data-title="Dark theme" title="Modo Oscuro" class="anm-zoomIn delay-800"><b>&FilledSmallSquare;</b></label>
+							<label for="theme-soft" id="label-soft" data-title="Soft theme" title="Modo Rojo" class="anm-zoomIn delay-900"><b>&star;</b></label>
+							<label for="theme-light" id="label-light" data-title="Light theme" title="Modo claro" class="anm-zoomIn delay-1000"><b>&EmptySmallSquare;</b></label>
 						 </div>
 					</nav>
-					<hr>
 					<input type="radio" name="layout" id="layout-simple" aria-hidden="true" hidden checked>
 					<input type="radio" name="layout" id="layout-list" aria-hidden="true" hidden>
 					<input type="radio" name="layout" id="layout-gallery" aria-hidden="true" hidden>
@@ -31,7 +30,7 @@ modes: true
       		<article class="anm-moveFromBottomFade delay-1000">
 				<h3><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></h3>
 				<strong>{{ post.category }}</strong>
-        		<div>{% if post.id %}<a href="{{ site.baseurl }}{{ post.url }}"><img class="blog-img" src="https://i1.ytimg.com/vi/{{ post.img }}/maxresdefault.jpg" rel="foto de {{ post.title }} , {% for tag in post.tags %} {{ tag }}, {% endfor %}" title="{{ post.title }}"></a>{% endif %}{{ post.excerpt }}</div>
+        		<div>{% if post.id %}<a href="{{ site.baseurl }}{{ post.url }}"><img class="blog-img" src="https://i1.ytimg.com/vi/{{ post.img }}/maxresdefault.jpg" rel="foto de {{ post.title }} , {% for tag in post.tags %}{{ tag }}, {% endfor %}" title="{{ post.title }}"></a>{% endif %}{{ post.excerpt }}</div>
       			<nav><a href="{{ site.baseurl }}{{ post.url }}" class="read-more">&rtrif;</a></nav>
       		</article>
 		{% if paginator.total_pages > 1 %}
