--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@ modes: true
   	{% include partials/head.html %}  	
 <main id="page-main" role="main">
 	<div id="layout">
-					<nav class="nav-scroll anm-moveFromLeftFade delay-100">
+					<nav class="nav-scroll anm-moveFromLeftFade">
 						<div>
-							<label for="layout-simple" title="ver Gran formato" id="label-simple" class="anm-zoomIn delay-400"><b>&timesb;</b></label>
-							<label for="layout-list" title="ver en Lista compacta" id="label-list" class="anm-zoomIn delay-500"><b>&minusb;</b></label>
-							<label for="layout-gallery" title="ver en Galeria" id="label-gallery" class="anm-zoomIn delay-600"><b>&plusb;</b></label>
-							<label id="separador" class="anm-zoomIn delay-700">&boxv;</label>
+							<label for="layout-gallery" title="ver en Galeria" id="label-gallery" class="anm-zoomIn delay-500"><b>&plusb;</b></label>
+							<label for="layout-list" title="ver en Lista compacta" id="label-list" class="anm-zoomIn delay-600"><b>&minusb;</b></label>
+							<label for="layout-simple" title="ver Gran formato" id="label-simple" class="anm-zoomIn delay-700"><b>&timesb;</b></label>
+							<label id="separador" class="anm-zoomIn delay-200">&boxv;</label>
 							<label for="theme-dark" id="label-dark" data-title="Dark theme" title="Modo Oscuro" class="anm-zoomIn delay-800"><b>&FilledSmallSquare;</b></label>
 							<label for="theme-soft" id="label-soft" data-title="Soft theme" title="Modo Rojo" class="anm-zoomIn delay-900"><b>&star;</b></label>
 							<label for="theme-light" id="label-light" data-title="Light theme" title="Modo claro" class="anm-zoomIn delay-1000"><b>&EmptySmallSquare;</b></label>
