--- a/buscar.html
+++ b/buscar.html
@@ -10,7 +10,7 @@ modes: true
     	<div id="buscar-resultats">
 <script>
   (function() {
-    var cx = 'partner-pub-2493257171023914:6177620106';
+    var cx = 'partner-pub-2493257171023914:5113089481';
     var gcse = document.createElement('script');
     gcse.type = 'text/javascript';
     gcse.async = true;
@@ -19,18 +19,10 @@ modes: true
     s.parentNode.insertBefore(gcse, s);
   })();
 </script>
-<gcse:searchbox></gcse:searchbox>
-<gcse:searchresults></gcse:searchresults>
+<gcse:searchresults-only></gcse:searchresults-only>
 		</div>
 	</div>
 	<em><hr></em>
-	<div>
-		<section id="buscar-related">
-<script type="text/javascript" src="http://www.google.com/cse/query_renderer.js"></script>
-<div id="queries"></div>
-<script src="http://www.google.com/cse/api/partner-pub-2493257171023914/cse/6177620106/queries/js?oe=UTF-8&amp;callback=(new+PopularQueryRenderer(document.getElementById(%22queries%22))).render"></script>
-		</section>
-	</div>
 	<div>
 		<section id="follows">
 		{% include partials/suscribe.html %}
