--- a/buscar.html
+++ b/buscar.html
@@ -19,7 +19,7 @@ modes: true
     s.parentNode.insertBefore(gcse, s);
   })();
 </script>
-<gcse:search></gcse:search>
+<gcse:searchresults-only></gcse:searchresults-only>
 		</div>
 	</div>
 	<em><hr></em>
