--- a/buscar.html
+++ b/buscar.html
@@ -19,6 +19,7 @@ modes: true
     s.parentNode.insertBefore(gcse, s);
   })();
 </script>
+<gcse:searchbox></gcse:searchbox>
 <gcse:searchresults></gcse:searchresults>
 		</div>
 	</div>
