--- a/buscar.html
+++ b/buscar.html
@@ -10,7 +10,7 @@ modes: true
     	<div id="buscar-resultats">
 <script>
   (function() {
-    var cx = '001251290766013693580:1biecpywwe8';
+    var cx = 'partner-pub-2493257171023914:5113089481';
     var gcse = document.createElement('script');
     gcse.type = 'text/javascript';
     gcse.async = true;
